docs: add documentation for deleteOpening
