# handler/response.go
@@ -31,6 +31,10 @@ type ErrorResponse struct {
 
 type CreateOpeningResponse struct {
 	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+type DeleteOpeningResponse struct {
 	Message string                  `json:"message"`
 	Data    schemas.OpeningResponse `json:"data"`
 }
